# pyresume

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  README.md  TEST_SUMMARY.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  test_parser.py
.claude/: settings.local.json
.claude/agents/: database-engineer.md  devops-engineer.md  fastapi-developer.md  fullstack-architect.md  nlp-ml-engineer.md  project-orchestrator.md  queue-cache-engineer.md  react-developer.md  scraping-engineer.md  test-automation-engineer.md  ui-ux-engineer.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  tests.yml
docs/: API_REFERENCE.md  GETTING_STARTED.md  USAGE_GUIDE.md  pyresume-handoff.md  simple-parser-library.md
examples/: basic_usage.py  batch_processing.py  confidence_scores.py  intelligent_parser_example.py
pyresume/: __init__.py  intelligent_parser.py  parser.py
pyresume/data/: skills.json
pyresume/extractors/: __init__.py  docx.py  pdf.py  text.py
pyresume/llm/: __init__.py  base.py
pyresume/llm/providers/: __init__.py  anthropic_provider.py
pyresume/models/: __init__.py  resume.py
pyresume/providers/: __init__.py  anthropic_provider.py  local_provider.py  openai_provider.py
pyresume/utils/: __init__.py  dates.py  patterns.py  phones.py
tests/: test_basic_functionality.py  test_extractors.py  test_parser.py  test_utils.py
tests/fixtures/: resume_complex.txt  resume_edge_cases.txt  resume_international.txt  resume_malformed.txt  resume_minimal.txt  resume_standard.txt
